# etf-alloc

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setmeup.py  setup.py  start.sh
.github/workflows/: python.yml  test-build-deploy.yml
dags/: bars_etl.py
notebooks/: Trend.ipynb
scripts/: dev-checks.sh
services/: airflow.service  dtale.service  jupyter.service
src/monitor/: app.py
src/scripts/: copy_arctic_data.py  load_historical_data.py
src/tradingo/: __init__.py  _backtest.pyx  analytics.py  api.py  backtest.py  cli.py  config.py  dag.py  engine.py  env_provider.py  live.py  log_config.py  plotting.py  portfolio.py  sampling.py  settings.py  signals.py  symbols.py  utils.py
src/tradingo/analytics/: __init__.py  cov.py  expectation.py  factors.py  filters.py  ratios.py  returns.py  vol.py
src/tradingo/backfill/: dukascopy.py  forexsb.py
src/tradingo/sampling/: __init__.py  api.py  base.py  ig.py  instruments.py  types.py  yf.py
src/tradingo/sampling/providers/: futures.py  ig.py
src/tradingo/templates/: downstream_tasks.yaml  instruments.yaml  portfolio_construction.yaml
src/tradingo/templates/instruments/: forexsb.yaml  ig-trading.yaml  yfinance.yaml
src/tradingo/test/: conftest.py  fixtures.py  test_api.py  test_backtest.py  test_cli.py  test_config.py  test_env_provider.py  test_signals.py  utils.py
test/tradingo/: conftest.py  test_api.py  test_backtest.py  test_cli.py  test_config.py  test_cov.py  test_dag.py  test_env_provider.py  test_integration.py  test_sampling.py  test_signals.py  test_symbols.py
test/tradingo/analytics/: test_cov.py  test_returns.py
trading/: config.json  ig-trading.json  stocks.json  universe.csv
